Agrega codigo para bd y modelo

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,6 +7,11 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = jeduan
+resources.db.params.password = qwerty
+resources.db.params.dbname = zf-tutorial
 
 [staging : production]
 
