Agrega layout con zf enable layout

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,6 +12,7 @@ resources.db.params.host = localhost
 resources.db.params.username = jeduan
 resources.db.params.password = qwerty
 resources.db.params.dbname = zf-tutorial
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
 [staging : production]
 
